# gl-learn-render-project

./: CMakeLists.txt  README.md
includes/learnopengl/: camera.h  mesh.h  model.h  model_animation.h  shader.h  shader_c.h  shader_m.h  shader_s.h  shader_t.h
src/: Bezier.hpp  BezierUniformParametric.cpp  Camera.hpp  MyShader.hpp  Polygon3D.cpp  Triangulation.hpp  Triangulation2D.cpp  Utils.hpp  bezier_surface.cpp  bezier_uniforme_parametrique.cpp  courbe_classique.cpp  main.cpp  main1.cpp  main_old.cpp
src/glad/: glad.c  glad.h
src/shaders/: Fragment.fs  Vertex.vs  bezier_surface.fs  bezier_surface.vs
